--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
   <body>
     <header>
       <nav id="navigation">
-        <a class="logo">Cecilia & Marcus</a>
+        <a class="logo" href="#hero">Cecilia & Marcus</a>
 
         <div class="links">
-          <a>INFORMATION</a>
-          <a>PLATS</a>
-          <a class="rsvpButton">RSVP</a>
+          <a href="#info">INFORMATION</a>
+          <a href="#location">PLATS</a>
+          <a class="rsvpButton" href="#rsvp">RSVP</a>
         </div>
       </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="hero">
       <h1 class="names">
         Cecilia
         <div class="ampersand">&</div>
         Marcus
       </h1>
+      <span class="date">2025.06.07</span>
       <div class="footer">
-        <span class="date">2025.06.07</span>
-        <button class="rsvpButton">RSVP senast 2025.01.31</button>
+        <button class="rsvpFooterButton">RSVP senast 2025.01.31</button>
       </div>
     </section>
 
-    <section class="second information">
+    <section class="second information" id="info">
       <h2>Hjärtligt välkomna</h2>
       <p>
         Hjärtligt välkomna till vårt bröllop, som vi hoppas få fira med dig.
@@ -40,25 +40,25 @@
       </p>
     </section>
 
-    <section class="second plats">
+    <section class="second plats" id="location">
       <div class="text">
         <h2>Plats</h2>
         <span>SUNNA GÅRD</span>
         <span>SUNNA 27, 471 90 Kyrkesund</span>
       </div>
 
-      <!-- <iframe
+      <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16906.768442022014!2d11.524356123269948!3d58.01584057199909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464579ba4535b26b%3A0xe1aa2bf6b7e4f355!2sSunna%20semesteranl%C3%A4ggning!5e0!3m2!1ssv!2sse!4v1722024943186!5m2!1ssv!2sse"
-        width="600"
-        height="450"
+        width="300"
+        height="300"
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
-      ></iframe> -->
+      ></iframe>
     </section>
 
-    <section class="rsvp">
+    <section class="rsvp" id="rsvp">
       <h2>Hoppas vi ses</h2>
       <form method="post">
         <div>
@@ -96,13 +96,35 @@
 
     <script>
       // Navigation
-      document
-        .querySelectorAll("#navigation a")
-        .forEach((a, index) =>
-          a.addEventListener("click", () =>
-            scrollTo({ top: window.innerHeight * index, behavior: "smooth" })
-          )
-        );
+      function scrollToSection(sectionId) {
+        const section = document.getElementById(sectionId);
+        if (section) {
+          section.scrollIntoView({ behavior: "smooth" });
+        }
+      }
+
+      function updateURL(sectionId) {
+        history.pushState(null, "", `#${sectionId}`);
+      }
+
+      document.querySelectorAll("nav a").forEach((link) => {
+        link.addEventListener("click", (e) => {
+          e.preventDefault();
+          const sectionId = link.getAttribute("href").slice(1);
+          scrollToSection(sectionId);
+          updateURL(sectionId);
+        });
+      });
+
+      function handleURLChange() {
+        const hash = window.location.hash.slice(1);
+        if (hash) {
+          scrollToSection(hash);
+        }
+      }
+
+      window.addEventListener("load", handleURLChange);
+      window.addEventListener("popstate", handleURLChange);
 
       // Fade in on scroll
       document.addEventListener("DOMContentLoaded", function () {
