--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div id="info">
+        <div id="forminfo">
           <input type="email" placeholder="Email" />
           <input type="text" placeholder="Telefon" />
           <div class="kost">
@@ -151,7 +151,7 @@
       });
 
       // Form
-      const info = document.getElementById("info");
+      const info = document.getElementById("forminfo");
 
       document.getElementById("kommer").addEventListener("change", (e) => {
         e.target.checked
