add title to map

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         style="border: 0"
         allowfullscreen=""
         loading="lazy"
-        name="location"
+        title="location"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </section>
