--- a/index.html
+++ b/index.html
@@ -48,14 +48,12 @@
       </div>
 
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16906.768442022014!2d11.524356123269948!3d58.01584057199909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464579ba4535b26b%3A0xe1aa2bf6b7e4f355!2sSunna%20semesteranl%C3%A4ggning!5e0!3m2!1ssv!2sse!4v1722024943186!5m2!1ssv!2sse"
         width="300"
         height="300"
         style="border: 0"
-        allowfullscreen=""
         loading="lazy"
-        title="location"
-        referrerpolicy="no-referrer-when-downgrade"
+        title="map"
+        src="https://www.google.com/maps/embed/v1/place?q=Sunna%20semesteranl%C3%A4ggning%2C%20SUNNA%2C%20Kyrkesund%2C%20Sverige&key=AIzaSyD1WYBotrWQllVH8oVDS9244ZjhMKsvqO4"
       ></iframe>
     </section>
 
