fix lighthouse issues

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="public/hero.webp" as="image" type="image/webp" />
     <link rel="stylesheet" href="style.css" />
     <title>Cecilia och Marcus</title>
   </head>
@@ -53,7 +54,7 @@
         style="border: 0"
         loading="lazy"
         title="map"
-        src="https://www.google.com/maps/embed/v1/place?q=Sunna%20semesteranl%C3%A4ggning%2C%20SUNNA%2C%20Kyrkesund%2C%20Sverige&key=AIzaSyD1WYBotrWQllVH8oVDS9244ZjhMKsvqO4"
+        src="https://www.google.com/maps/embed/v1/place?q=Sunna%20semesteranl%C3%A4ggning%2C%20SUNNA%2C%20Kyrkesund%2C%20Sverige&key=AIzaSyD1WYBotrWQllVH8oVDS9244ZjhMKsvqO4&cookiepolicy=none"
       ></iframe>
     </section>
 
