remove broken cookie param

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         style="border: 0"
         loading="lazy"
         title="map"
-        src="https://www.google.com/maps/embed/v1/place?q=Sunna%20semesteranl%C3%A4ggning%2C%20SUNNA%2C%20Kyrkesund%2C%20Sverige&key=AIzaSyD1WYBotrWQllVH8oVDS9244ZjhMKsvqO4&cookiepolicy=none"
+        src="https://www.google.com/maps/embed/v1/place?q=Sunna%20semesteranl%C3%A4ggning%2C%20SUNNA%2C%20Kyrkesund%2C%20Sverige&key=AIzaSyD1WYBotrWQllVH8oVDS9244ZjhMKsvqO4"
       ></iframe>
     </section>
 
