--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="links">
           <a href="#info">INFORMATION</a>
           <a href="#location">PLATS</a>
-          <a class="rsvpButton" href="#rsvp">RSVP</a>
+          <a class="rsvpButton" href="/rsvp.html">RSVP</a>
         </div>
       </nav>
     </header>
