--- a/index.html
+++ b/index.html
@@ -56,19 +56,20 @@
     <section id="location">
       <h2>Plats</h2>
 
-      <div class="text">
-        <span>SUNNA GÅRD</span>
-        <span>SUNNA 27, 471 90 Kyrkesund</span>
-      </div>
-
       <iframe
         width="300"
         height="300"
         style="border: 0"
+        class="map"
         loading="lazy"
         title="map"
         src="https://www.google.com/maps/embed/v1/place?q=Sunna%20semesteranl%C3%A4ggning%2C%20SUNNA%2C%20Kyrkesund%2C%20Sverige&key=AIzaSyD1WYBotrWQllVH8oVDS9244ZjhMKsvqO4"
       ></iframe>
+
+      <div class="text">
+        <span>SUNNA GÅRD</span>
+        <span>SUNNA 27, 471 90 Kyrkesund</span>
+      </div>
     </section>
 
     <section id="schedule">
