massa mer grejer

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
       </div>
     </section>
 
+    <section id="welcome">
+      <h2>Välkomna till vårt bröllop!</h2>
+      <div class="gallery">
+        <img src="public/gallery/3.jpeg" />
+        <img src="public/gallery/4.jpeg" />
+        <img src="public/gallery/6.jpeg" />
+      </div>
+    </section>
+
     <section id="info">
       <h2>Toastmadame</h2>
       <div class="toastmadame">
@@ -42,12 +51,16 @@
         <div class="text">
           <div>
             <h3>Rebecca Hammar Flohr</h3>
-            <span class="email">ceciliaochmarcus@gmail.com</span>
+            <span class="email">info@ceciliaochmarcus.se</span>
           </div>
           <p>
-            Hej! Mitt namn är Rebecca, och jag kommer att vara toastmadame på
-            bröllopet. Hör gärna av er om ni har frågor, eller om ni vill hålla
-            tal på bröllopet. Jag ser fram emot att träffa er!
+            Hej allihopa! Det är jag som är Rebecca och har äran att få vara
+            toastmadame för kvällen! Jag ser verkligen fram emot att ta del av
+            era frågor och anmälningar till tal. Vi kommer ha en magisk middag
+            följt av en riktig PANGfest när vi firar vårat älskade brudpar!
+            Cecilia och Marcus är i princip mitt ALLT, så tveka inte på att höra
+            av er för jag är SÅ nyfiken på att träffa alla nära och kära! Jag
+            kan knappt bärga mig tills vi får fira tillsammans i juni!
           </p>
         </div>
       </div>
@@ -56,19 +69,19 @@
     <section id="location">
       <h2>Plats</h2>
 
-      <iframe
-        width="300"
-        height="300"
-        style="border: 0"
-        class="map"
-        loading="lazy"
-        title="map"
-        src="https://www.google.com/maps/embed/v1/place?q=Sunna%20semesteranl%C3%A4ggning%2C%20SUNNA%2C%20Kyrkesund%2C%20Sverige&key=AIzaSyD1WYBotrWQllVH8oVDS9244ZjhMKsvqO4"
-      ></iframe>
+      <div class="placeContainer">
+        <iframe
+          style="border: 0"
+          class="map"
+          loading="lazy"
+          title="map"
+          src="https://www.google.com/maps/embed/v1/place?q=Sunna%20semesteranl%C3%A4ggning%2C%20SUNNA%2C%20Kyrkesund%2C%20Sverige&key=AIzaSyD1WYBotrWQllVH8oVDS9244ZjhMKsvqO4"
+        ></iframe>
 
-      <div class="text">
-        <span>SUNNA GÅRD</span>
-        <span>SUNNA 27, 471 90 Kyrkesund</span>
+        <div class="text">
+          <span>SUNNA GÅRD</span>
+          <span>SUNNA 27, 471 90 Kyrkesund</span>
+        </div>
       </div>
     </section>
 
