--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       </div>
     </section>
 
+    <!-- <section>
+      <h2>Boende</h2>
+    </section> -->
+
     <section id="info">
       <h2>Toastmadame</h2>
       <div class="toastmadame">
