--- a/index.html
+++ b/index.html
@@ -44,10 +44,6 @@
       </div>
     </section>
 
-    <!-- <section>
-      <h2>Boende</h2>
-    </section> -->
-
     <section id="info">
       <h2>Toastmadame</h2>
       <div class="toastmadame">
@@ -174,6 +170,43 @@
         </li>
         <li class="vertLine"></li>
       </ul>
+    </section>
+
+    <section id="extra">
+      <h2>Bra att veta</h2>
+      <div class="parts">
+        <div class="part random">
+          <h3>Lorem ipsum</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+            temporibus soluta neque quaerat ea! Et quisquam qui quae veniam,
+            ullam illum! Unde alias aperiam laboriosam non eaque doloribus,
+            soluta eius nam cupiditate eveniet sit debitis reprehenderit illum
+            explicabo doloremque autem!
+          </p>
+        </div>
+        <div class="part clothes">
+          <h3>Klädkod</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab
+            repellendus minus corrupti illo necessitatibus doloribus, veritatis
+            aliquam odio doloremque quasi eius quibusdam fugiat adipisci placeat
+            modi suscipit error perferendis? Incidunt est id, maiores laboriosam
+            minima aperiam quis at labore obcaecati vitae consequuntur
+            voluptatum saepe doloremque repudiandae debitis delectus veritatis
+            tempora!
+          </p>
+        </div>
+        <div class="part accomodation">
+          <h3>Boende</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
+            beatae similique quaerat eius explicabo cupiditate perferendis animi
+            voluptas dolore totam qui ipsum expedita veniam aliquam mollitia a
+            ipsa, excepturi quis?
+          </p>
+        </div>
+      </div>
     </section>
 
     <!-- <script>
